# MySQL-CPP

./: CMakeLists.txt  main  main.cpp  my_mariadb.cpp  my_mariadb.h  test.cpp
include/: my_mysql.h
src/: .main.cpp.swp  main.cpp  my_mysql.cpp
